WexGit/Wex_DX/force-app/main/default/objects/Truckers_Gold_Invoice__c/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>