WexGit/Wex_DX/force-app/main/default/objects/Truckers_Gold_Invoice__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>