WexGit/Wex_DX/force-app/main/default/objects/Truckers_Gold_Invoice__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <description>The member who made the purchase</description>
    <inlineHelpText>The member who made the purchase</inlineHelpText>
    <label>Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gold Invoices</relationshipLabel>
    <relationshipName>Truckers_Gold_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>