WexGit/Wex_DX/force-app/main/default/objects/Truckers_Gold_Invoice__c/fields/New_Tires_Count__c.field-meta.xml
<CustomField>
    <fullName>New_Tires_Count__c</fullName>
    <label>New Tires Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>