WexGit/Wex_DX/force-app/main/default/objects/Truckers_Gold_Invoice__c/fields/Payable_Tax__c.field-meta.xml
<CustomField>
    <fullName>Payable_Tax__c</fullName>
    <label>Payable Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>