WexGit/Wex_DX/force-app/main/default/objects/Truckers_Gold_Invoice__c/fields/Payment_Discount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Discount__c</fullName>
    <label>Payment Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>