WexGit/Wex_DX/force-app/main/default/objects/Truckers_Gold_Invoice__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>The type of payment method used on the invoice</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The type of payment method used on the invoice</inlineHelpText>
    <label>Payment Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>