WexGit/Wex_DX/force-app/main/default/objects/Truckers_Gold_Invoice__c/fields/PO_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PO Date</label>
    <type>Date</type>
</CustomField>