WexGit/Wex_DX/force-app/main/default/objects/Truckers_Gold_Invoice__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PO Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>