WexGit/Wex_DX/force-app/main/default/objects/Truckers_Gold_Invoice__c/fields/Receivable_Tax__c.field-meta.xml
<CustomField>
    <fullName>Receivable_Tax__c</fullName>
    <label>Receivable Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>