WexGit/Wex_DX/force-app/main/default/objects/Truckers_Gold_Invoice__c/fields/Retread_Tire_Count__c.field-meta.xml
<CustomField>
    <fullName>Retread_Tire_Count__c</fullName>
    <label>Retread Tire Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>