WexGit/Wex_DX/force-app/main/default/objects/Truckers_Gold_Invoice__c/fields/Tire_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Tire_Specialist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tire Specialist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>