WexGit/Wex_DX/force-app/main/default/objects/Truckers_Gold_Invoice__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>