WexGit/Wex_DX/force-app/main/default/objects/Truckers_Gold_Invoice__c/fields/Vendor_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor Invoice Date</label>
    <type>Date</type>
</CustomField>