WexGit/Wex_DX/force-app/main/default/objects/Truckers_Gold_Invoice__c/fields/Vendor_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>